# scholarscope

./: .env.example  .gitignore  DEMO.md  LICENSE  Makefile  README.md  compose.yml
.github/workflows/: ci.yml
airflow/dags/: arxiv_ingest_dag.py
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/src/: config.py  db.py  main.py
backend/src/agents/: graph.py  service.py  state.py
backend/src/models/: __init__.py  landscape.py  paper.py
backend/src/routers/: health.py  ingest.py  landscape.py  papers.py  search.py
backend/src/schemas/: agent.py  extraction.py  health.py  ingest.py  landscape.py  paper.py  query_optimization.py  search.py
backend/src/services/: observability.py
backend/src/services/cache/: cache.py  semantic.py
backend/src/services/extraction/: extractor.py
backend/src/services/guardrails/: input_rails.py  output_rails.py
backend/src/services/ingestion/: arxiv_client.py  backfill.py  chunking.py  repository.py  service.py
backend/src/services/llm/: client.py
backend/src/services/retrieval/: embeddings.py  fusion.py  indexing.py  os_client.py  query_optimizer.py  reindex.py  reranker.py  search.py
backend/src/services/synthesis/: clustering.py  graph.py  merge.py  pipeline.py  repository.py  synthesizer.py
backend/tests/: test_adversarial.py  test_agent_graph.py  test_arxiv_client.py  test_chunking.py  test_clustering.py  test_config.py  test_embeddings.py  test_extraction.py  test_fusion.py  test_health.py  test_hybrid_search.py  test_input_rails.py  test_landscape_graph.py  test_merge.py  test_observability.py  test_output_rails.py  test_paper_repository.py  test_query_optimization_wiring.py  test_query_optimizer.py  test_reranker.py  test_search_integration.py  test_search_queries.py  test_semantic_cache.py  test_synthesis.py
frontend/: .gitignore  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: BuildLandscapeButton.tsx  PaperCard.tsx  ReadingMap.tsx  SearchResults.tsx  TopicBar.tsx  TopicHistory.tsx
frontend/components/ui/: Button.tsx  (+2 more)
frontend/lib/: api.ts  history.ts
infra/postgres/: init-airflow-db.sh
(+2 files in other folders)
