[project]
name = "scholarscope-backend"
version = "0.1.0"
description = "ScholarScope API — hybrid retrieval, extraction, and landscape synthesis for arXiv papers"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "asyncpg>=0.29",
    "sqlalchemy[asyncio]>=2.0",
    "anthropic>=0.40",
    "langgraph>=0.2",
    "langfuse>=3.0",
    "scikit-learn>=1.4",
    "redis>=5.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]
# Heavy inference deps (torch) kept out of the base install so CI stays fast;
# the Docker image installs them, unit tests inject fake models.
ml = [
    "sentence-transformers>=3.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-m 'not integration'"
markers = [
    "integration: needs the dockerized stack (run via `make test-integration`)",
]
